--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,10 @@ Description: This package intends to unify several kinds of data wrangling under
 License: MIT + file LICENSE
 Depends:
     R (>= 4.0),
+Imports:
+    data.table (>= 1.14.10),
+    zoo (>= 1.8-12),
+    magrittr (>= 2.0.3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
