--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method("[",slice_artifact)
 S3method(as.data.table,slice_artifact)
 S3method(c,slice_artifact)
+S3method(dim,slice_artifact)
 S3method(merge,slice_artifact)
 S3method(na.exclude,slice_artifact)
 export(combine_features)
