Removes useless deps; adds wavelets package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,6 @@ S3method(merge,slice_artifact)
 S3method(na.exclude,slice_artifact)
 export(combine_features)
 import(data.table)
-import(magrittr)
 import(stats)
 import(utils)
-import(zoo)
+import(wavelets)
