--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,8 +12,7 @@ Depends:
     R (>= 4.0),
 Imports:
     data.table (>= 1.14.10),
-    zoo (>= 1.8-12),
-    magrittr (>= 2.0.3)
+    wavelets (>= 0.3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
