Add dwt method to slice_artifact

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,12 @@ S3method("[",slice_artifact)
 S3method(as.data.table,slice_artifact)
 S3method(c,slice_artifact)
 S3method(dim,slice_artifact)
+S3method(dwt,default)
+S3method(dwt,slice_artifact)
 S3method(merge,slice_artifact)
 S3method(na.exclude,slice_artifact)
 export(combine_features)
+export(dwt)
 import(data.table)
 import(stats)
 import(utils)
