--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(merge,slice_artifact)
 S3method(na.exclude,slice_artifact)
 export(combine_features)
 export(dwt)
+export(slice)
 import(data.table)
 import(stats)
 import(utils)
