--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,5 +18,6 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 LazyData: true
 Suggests: 
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    parallel (>= 4.3.0)
 Config/testthat/edition: 3
